Revision history for Config::App

{{$NEXT}}

1.16      2023-10-24 11:35:49-07:00 America/Los_Angeles
        - Add find() method

1.15      2022-03-19 17:33:40-07:00 America/Los_Angeles
        - Minor documentation update

1.14      2022-01-14 12:00:49-08:00 America/Los_Angeles
        - Support abs paths for config files
        - Add multiple default locations for config files

1.13      2021-01-10 14:07:37-08:00 America/Los_Angeles
        - Migrate to Test2::V0
        - Improve .gitignore file
        - License migrate to Artistic 2.0
        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
        - Update copyright year

1.12      2020-04-24 12:57:30-07:00 America/Los_Angeles
        - "libs" from included files are all appended not overwritten
        - Support for preinclude and optional_preinclude
        - Update Travis YAML

1.11      2019-04-02 11:03:41-07:00 America/Los_Angeles
        - Fix name of regression test

1.10      2019-04-02 11:01:31-07:00 America/Los_Angeles
        - Throw errors and stop on invalid parsing of configuration files

1.09      2018-10-02 07:14:34-07:00 America/Los_Angeles
        - Fix for include file recusions to warn and continue

1.08      2018-07-24 08:22:45-07:00 America/Los_Angeles
        - Fix bug in reporting of optional includes in conf dump

1.07      2018-06-26 16:43:37-07:00 America/Los_Angeles
        - Returned complex data structures are copies not refs to original data
        - Able to merge arrays in place of hashes

1.06      2018-06-15 16:03:13-07:00 America/Los_Angeles
        - Adding Perl versions to test; annual general update for 2018
        - Extended "libs" keyword to allow for single scalar string

1.05      2017-01-10 04:03:20-08:00 America/Los_Angeles
        - import() accepts multiple library dirs
        - import() gracefully calls new()
        - Support for the "libs" configuration keyword

1.04      2016-08-31 08:26:11-07:00 America/Los_Angeles