@@ -1,6 +1,7 @@
 Revision history for Config::App
 
 {{$NEXT}}
+        - Refactor to allow for cwd-based path-to-conf parsing
 
 1.16      2023-10-24 11:35:49-07:00 America/Los_Angeles
         - Add find() method
